--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "airbnb"
-  ],
+  "extends": ["airbnb"],
   "globals": {
     "document": true,
     "window": true,
@@ -21,9 +19,7 @@
       "modules": true
     }
   },
-  "plugins": [
-    "react-hooks"
-  ],
+  "plugins": ["react-hooks"],
   "rules": {
     "arrow-body-style": "off",
     "class-methods-use-this": "off",
@@ -34,10 +30,7 @@
         "allowSingleLine": true
       }
     ],
-    "comma-dangle": [
-      "error",
-      "never"
-    ],
+    "comma-dangle": ["error", "never"],
     "consistent-return": "off",
     "curly": "error",
     "eol-last": "off",
@@ -55,6 +48,7 @@
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/label-has-for": "off",
     "jsx-a11y/href-no-hash": "off",
+    "jsx-quotes": [2, "prefer-single"],
     "no-alert": "off",
     "no-console": "off",
     "no-debugger": "off",
@@ -82,13 +76,13 @@
     "prefer-template": "error",
     "react/destructuring-assignment": "off",
     "react/forbid-prop-types": "off",
-    "react/jsx-closing-bracket-location": [
+    /*  "react/jsx-closing-bracket-location": [
       "error",
       {
         "selfClosing": "after-props",
         "nonEmpty": "after-props"
       }
-    ],
+    ], */
     "react/jsx-curly-spacing": [
       "error",
       {
